2010-09-19  Julien Danjou  <julien@danjou.info>

	* url-cache.el (url-fetch-from-cache): New function.

2010-09-18  Julien Danjou  <julien@danjou.info>

	* url-vars.el (url-cache-expired): Remove unused variable.

2010-09-14  Julien Danjou  <julien@danjou.info>

	* url-cache (url-store-in-cache): Make `buff' argument really optional.

2010-09-14  Glenn Morris  <rgm@gnu.org>

	* url-cookie.el (url-cookie-expired-p): Tweak previous change.

2010-09-14  shawn boles  <shawn.boles@gmail.com>  (tiny change)

	* url-cookie.el (url-cookie-expired-p): Simplify and fix.  (Bug#6957)

2010-09-11  Glenn Morris  <rgm@gnu.org>

	* url-cache.el, url-gw.el, url-history.el, url-irc.el, url-util.el:
	* url-vars.el: Remove leading `*' from defcustom docs.

2010-07-27  Michael Albinus  <michael.albinus@gmx.de>

	* url-http (url-http-parse-headers): Disable file name handlers at
	all (not only Tramp).  (Bug#6717)

2010-07-27  Michael Albinus  <michael.albinus@gmx.de>

	* url-http (url-http-parse-headers): Disable Tramp.  (Bug#6717)

2010-07-01  Mark A. Hershberger  <mah@everybody.org>

	* url-http.el (url-http-create-request): Add a CRLF on the end so
	that POSTs with content to https urls work.  See
	<https://bugs.launchpad.net/mediawiki-el/+bug/540759>

2010-06-22  Mark A. Hershberger  <mah@everybody.org>

	* url-parse.el (url-user-for-url, url-password-for-url):
	Convenience functions that get usernames and passwords for urls
	from auth-source functions.

2010-06-12  Štěpán Němec  <stepnem@gmail.com>  (tiny change)

	* url-vars.el (url-privacy-level): Fix doc typo.  (Bug#6406)

2010-05-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* url-util.el (url-unhex-string): Don't accidentally decode as latin-1.

2010-05-07  Chong Yidong  <cyd@stupidchicken.com>

	* Version 23.2 released.

2010-05-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* url-dired.el (url-dired-minor-mode): Use define-minor-mode.

2010-03-24  Teodor Zlatanov  <tzz@lifelogs.com>
